# scrapy-selenium-python

./: .travis.yml  README.md  setup.cfg
requirements/: requirements.txt
tests/: test_cases.py  test_middlewares.py
