[metadata]
name = scrapy_selenium_python
version = 0.1.2
url = https://github.com/calincc/scrapy_selenium_python
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium Python3.5 compatible
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
