[metadata]
name = scrapy-selenium-python
version = 0.1.3
url = https://github.com/calincc/scrapy-selenium-python
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
